# gtest_example

./: CMakeLists.txt  README.md  install_gtest.sh  main.cpp  make.sh  output.sh
.github/workflows/: c-cpp.yml
