# CMakeLists.txt

cmake_minimum_required(VERSION 3.10)

project(gtest_sample)

include(FetchContent)
FetchContent_Declare(
    googletest
    GIT_REPOSITORY https://github.com/google/googletest.git
    GIT_TAG        release-1.11.0
)
FetchContent_MakeAvailable(googletest)

add_executable(gtest_sample main.cpp)

target_link_libraries(gtest_sample gtest)
